# VideoCutter

./: CMakeLists.txt  README.md  create_loading_gif.py  main.cpp  main.py  requirements.txt  video_processor.py
